@@ -2,12 +2,10 @@
 # Define $DEP_OBJECTS before this file is included
 # $DEP_OBJECTS contain a list of object files that are checked for dependancies
 
+ifneq ($(DEPENDENCIES),no)
+
 DEP_FILTERED := $(filter-out $(DEP_EXCLUDE_FILTER), $(DEP_OBJECTS:.o=.d))
 DEP_FILES := $(join $(dir $(DEP_FILTERED)), $(addprefix ., $(notdir $(DEP_FILTERED))))
-
-
-# I (Andrew Greenwood) had to add this to compile under MinGW:
-# SEP = /
  
 ifneq ($(MAKECMDGOALS),clean)
 -include $(DEP_FILES)
@@ -36,3 +34,5 @@ endif
 
 .%.d: %.asm $(PATH_TO_TOP)/tools/depends$(EXE_POSTFIX) $(GENERATED_HEADER_FILES)
 	$(NASM_CMD) $(NFLAGS) -M $< | $(DEPENDS_PATH)$(SEP)depends$(EXE_POSTFIX) $(@D) $@
+
+endif
